# tui-todo-list

./: Cargo.toml  README.md
hypr/: todo.conf
src/: cli.rs  commands.rs  error.rs  hypr.rs  main.rs  model.rs  paths.rs  tmux.rs
src/store/: fake.rs  mod.rs  sqlite.rs
src/tui/: app.rs  mod.rs  ui.rs
tmux/: todo.conf
