[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.30.2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
thiserror = "2.0.18"
